added a new project

--- a/index.html
+++ b/index.html
@@ -141,6 +141,21 @@
                 </div>
 
                 <div class="row gy-4">
+
+                    <div class="col-md-6" data-aos="fade-up">
+                        <div class="card-custom rounded-4 bg-base shadow-effect">
+                            <div class="card-custom-image rounded-4">
+                                <img class="rounded-4" src="./assets/images/gox (1) (1).png" alt="">
+                            </div>
+                            <div class="card-custom-content p-4">
+                                <h4>An employee management system</h4>
+                                <p>The system is used to manage all employee activities in a working setting </p>
+                                <a href="https://frontend-gamma-gilt.vercel.app/" class="link-custom">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+
+
                     <div class="col-md-6" data-aos="fade-up">
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
