worked on my mail

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
                                 <img class="rounded-4" src="./assets/images/gox (1) (1).png" alt="">
                             </div>
                             <div class="card-custom-content p-4">
-                                <h4>An employee management system</h4>
-                                <p>The system is used to manage all employee activities in a working setting </p>
+                                <h4> Management system</h4>
+                                <p>Manage all employee activities </p>
                                 <a href="https://frontend-gamma-gilt.vercel.app/" class="link-custom">Read More</a>
                             </div>
                         </div>
@@ -342,7 +342,7 @@
                                 <textarea name="" rows="4" class="form-control" placeholder="Enter your message"></textarea>
                             </div>
                             <div class="form-group col-12 d-grid">
-                                <button type="submit" class="btn btn-brand">Contact me</button>
+                                <a href="mailto:minamyle@gmail.com?subject=Collaboration%20Inquiry%20from%20Amina%20Site" class="btn btn-brand">Contact me</a>
                             </div>
                         </form>
                     </div>
